@startuml DomainModel

entity "WarrantyCard" {
    + cardId: string
    + frontSide: FrontSide
    + backSide: BackSide
}

entity "FrontSide" {
    + mainTitle: string
    + pageLink: string
    + qrCodes: QRCode[]
    + benefits: Benefit[]
    + callToAction: CallToAction
    + images: Image[]
}

entity "BackSide" {
    + welcomeMessage: string
    + contactInfo: ContactInfo[]
    + qrCodes: QRCode[]
    + images: Image[]
}

entity "QRCode" {
    + type: string
    + url: string
}

entity "ContactInfo" {
    + email: string
    + physicalAddress: string
}


entity "Image" {
    + imageUrl: string
    + altText: string
    + x: int  /' coordenada horizontal en píxeles'/
    + y: int  /' coordenada vertical en píxeles'/
    + width: int  
    + height: int 
}

WarrantyCard "1" -- "1" FrontSide
WarrantyCard "1" -- "1" BackSide
FrontSide "1" -- "0..*" QRCode
FrontSide "1" -- "0..*" Image
BackSide "1" -- "0..*" QRCode
BackSide "1" -- "1" ContactInfo
BackSide "1" -- "0..*" Image
@enduml
